# rolePlayer

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build.sh  cmake_install.cmake  rolePlayer
data/: Angel.adv  Test.adv  empty.adv
data/Characters/: Melissa_Jones.txt
include/: AdvLexer.h  CMakeLists.txt  FileUtils.h  Makefile  TermUtils.h  TestFunctions.h  TextUtils.h  cmake_install.cmake  textUtils.h
src/: AdvLexer.cpp  CMakeLists.txt  FileUtils.cpp  Makefile  TermUtils.cpp  TestFunctions.cpp  Testing.cpp  TextUtils.cpp  cmake_install.cmake  rolePlayer  rolePlayer.cpp
